<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/BSCenteredFragment.Intro">

    <LinearLayout style="@style/BSCenteredContainer">

        <TextView
            style="@style/BSCaption.Intro"
            android:text="@string/slide_3_title" />

        <TextView
            style="@style/BSContent.Intro"
            android:text="@string/slide_3_instructions_1"/>

        <LinearLayout
            android:id="@+id/layout_conditions"
            style="@style/BSCenteredContainer">
        </LinearLayout>

        <TextView
            style="@style/BSContent.Intro"
            android:text="@string/slide_3_instructions_2" />

        <Button
            android:id="@+id/button_createGoal"
            android:text="Create Goal"
            style="@style/BSButton" />

    </LinearLayout>

</RelativeLayout>
